--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                   <h4>Коляски</h4>
                 </div>
                 <ul>
-                  <li><a href="kolyaski.html">Коляски для новорожденных</a></li>
-                  <li><a href="kolyaski.html">Прогулочные коляски</a></li>
-                  <li><a href="kolyaski.html">Коляски трости</a></li>
-                  <li><a href="kolyaski.html">Универсальные коляски</a></li>
-                  <li><a href="kolyaski.html">Коляски для двойни</a></li>
-                  <li><a href="kolyaski.html">Конверты</a></li>
-                  <li><a href="kolyaski.html">Защита от дождя и солнца</a></li>
-                  <li><a href="kolyaski.html">Сумки к коляскам</a></li>
-                  <li><a href="kolyaski.html">Запчасти</a></li>
+                  <li><a href="product page.html">Коляски для новорожденных</a></li>
+                  <li><a href="product page.html">Прогулочные коляски</a></li>
+                  <li><a href="product page.html">Коляски трости</a></li>
+                  <li><a href="product page.html">Универсальные коляски</a></li>
+                  <li><a href="product page.html">Коляски для двойни</a></li>
+                  <li><a href="product page.html">Конверты</a></li>
+                  <li><a href="product page.html">Защита от дождя и солнца</a></li>
+                  <li><a href="product page.html">Сумки к коляскам</a></li>
+                  <li><a href="product page.html">Запчасти</a></li>
                 </ul>
               </div>
               <div class="object_li">
