День 5, дело сделано

--- a/product page.html
+++ b/product page.html
@@ -111,7 +111,7 @@
                     <div class="line1">Цвет</div>
                     <div class="line2">Синий</div>
                   </div>
-                  <a href="#" class="lines_v_korziny_a">
+                  <a href="product selection.html" class="lines_v_korziny_a">
                     <div class="lines_v_korziny">
                       <div class="lines_btn_v_korziny">
                         <i class="fas fa-shopping-basket"></i>в корзину
