--- a/product selection.html
+++ b/product selection.html
@@ -59,23 +59,77 @@
       <div class="row">
         <div class="col-lg-12"> <!--основна-->
           <div class="col-lg-12 start"><!--Начало-->
-            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="#"> Товары для детей  »  </a><a href="#"> Коляски »</a><a href=""> Детские коляски</a></p></div>
+            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html"> Товары для детей  »  </a><a href="product page.html"> Коляски »</a><a href=""> Детские коляски</a></p></div>
           </div>
           <div class="object_baby_care col-lg-12">
             <div class="object_baby_care_name  col-lg-7">
               <div><h1>Коляска-трансформер Baby Care Manhattan Air</h1></div>
             </div>
             <div class="object_baby_care_info col-lg-12">
-              <div class="object_baby_care_info_img col-lg-4">
-                <img src="img/baby_care.png" alt="baby_care.png">
+              <div class="row">
+                <div class="object_baby_care_info_img col-lg-4">
+                  <img src="img/baby_care.png" alt="baby_care.png">
+                </div>
+                <div class="object_baby_care_info_about col-lg-6">
+                  <div>
+                    <p>Стоимость</p>
+                  </div>
+                  <a href="#">
+                    <div class="info_tovar_price_price">
+                      <div class="info_tovar_price_price_p">
+                        14590 Г.
+                      </div>
+                    </div>
+                  </a>
+                  <div class="lines">
+                    <div class="line">
+                      <div class="line1">Тип</div>
+                      <div class="line2">Прогулочная</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Количество блоков</div>
+                      <div class="line2">Один</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Механизм складывания</div>
+                      <div class="line2">Трость</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Количество колес</div>
+                      <div class="line2">8</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Колеса</div>
+                      <div class="line2">Резиновые</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Максимальный возраст</div>
+                      <div class="line2">3 года</div>
+                    </div>
+                    <div class="line">
+                      <div class="line1">Цвет</div>
+                      <div class="line2">Синий</div>
+                    </div>
+                  </div>
+                  <div class="info_tovar_price_status">
+                    <i class="fas fa-check-circle"></i>Есть в наличии
+                  </div>
+                  <a href="product selection.html" class="lines_v_korziny_a">
+                    <div class="lines_v_korziny">
+                      <div class="lines_btn_v_korziny">
+                        <i class="fas fa-shopping-basket"></i>в корзину
+                      </div>
+                    </div>
+                  </a>
+                </div>
               </div>
-              <div class="object_baby_care_info_about col-lg-6">
-                <div>
-                  <p>Стоимость</p>
-                </div>
-                <div class="info_tovar_price_price">
-                  
-                </div>
+            </div>
+            <div class="object_baby_care_about">
+              <div class="object_baby_care_about_title">
+                Описание
+              </div>
+              <div class="object_baby_care_about_text">
+                Коляска Silver Cross Balmoral — настоящее произведение искусства. Этапы производства в этой коляске включают операции, выполняемые вручную. Селин Дион, Кэтрин Зета-Джонс, британский премьер Тони Блэр, принцесса Монако Каролина, Мик Джагер, Бэкхемы, Роберт де Ниро, Брук Шилдс, Лиз Херли, Питер Гебриэл, Эль Макферсон и другие Celebrity-персоны для своих детей выбирают коляски фирмы Silver Cross.
               </div>
             </div>
           </div>
