--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
             <div class="col-5 col-md-3 foot ">
               <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+              <div><a href="https://vk.com/audios179631805" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
