--- a/product selection.html
+++ b/product selection.html
@@ -129,7 +129,8 @@
                 Описание
               </div>
               <div class="object_baby_care_about_text">
-                Коляска Silver Cross Balmoral — настоящее произведение искусства. Этапы производства в этой коляске включают операции, выполняемые вручную. Селин Дион, Кэтрин Зета-Джонс, британский премьер Тони Блэр, принцесса Монако Каролина, Мик Джагер, Бэкхемы, Роберт де Ниро, Брук Шилдс, Лиз Херли, Питер Гебриэл, Эль Макферсон и другие Celebrity-персоны для своих детей выбирают коляски фирмы Silver Cross.
+                <p>Коляска Silver Cross Balmoral — настоящее произведение искусства. Этапы производства в этой коляске включают операции, выполняемые вручную.</p>
+                <p>Селин Дион, Кэтрин Зета-Джонс, британский премьер Тони Блэр, принцесса Монако Каролина, Мик Джагер, Бэкхемы, Роберт де Ниро, Брук Шилдс, Лиз Херли, Питер Гебриэл, Эль Макферсон и другие Celebrity-персоны для своих детей выбирают коляски фирмы Silver Cross.</p>
               </div>
             </div>
           </div>
@@ -148,7 +149,7 @@
             <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
             <div class="col-5 col-md-3 foot ">
               <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
-              <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+              <div><a href="https://vk.com/audios179631805" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
