День 6, дело сделано

--- a/product page.html
+++ b/product page.html
@@ -461,7 +461,7 @@
             <div class="cloud">  <!--Корзина-->
               <p>В вашей корзине</p>
               <p><b>7 товаров на суму 1337 грн.</b></p>
-              <button type="button" class="btn btn-blue btn-sm">оформить</button>
+              <a href="purchase.html"><button type="button" class="btn btn-blue btn-sm">оформить</button></a>
             </div>
             <div class="blank">
               <div class="filter">
@@ -631,7 +631,7 @@
                               <div class="row">
                                 <div class="col-12">
                                   <div class="row justify-content-center">
-                                    <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+                                    <div class="col-5 col-md-3 foot "><div><a href="index.html"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
                                     <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
                                     <div class="col-5 col-md-3 foot ">
                                       <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
