--- a/purchase.html
+++ b/purchase.html
@@ -57,84 +57,58 @@
   <section class="main">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12"> <!--основна-->
+        <div class="col-lg-12">
           <div class="col-lg-12 start"><!--Начало-->
-            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html"> Товары для детей  »  </a><a href="product page.html"> Коляски »</a><a href=""> Детские коляски</a></p></div>
+            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html"> Товары для детей  »  </a><a href="product selection.html"> Коляски » </a><a href="product page.html"> Детские коляски »</a><a href="#"> Оформление заказа</a></p></div>
           </div>
-          <div class="object_baby_care col-lg-12">
-            <div class="object_baby_care_name  col-lg-7">
-              <div><h1>Коляска-трансформер Baby Care Manhattan Air</h1></div>
-            </div>
-            <div class="object_baby_care_info col-lg-12">
-              <div class="row">
-                <div class="object_baby_care_info_img col-lg-4">
-                  <img src="img/baby_care.png" alt="baby_care.png">
-                </div>
-                <div class="object_baby_care_info_about col-lg-6">
-                  <div>
-                    <p>Стоимость</p>
-                  </div>
-                  <a href="#">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                  <div class="lines">
-                    <div class="line">
-                      <div class="line1">Тип</div>
-                      <div class="line2">Прогулочная</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Количество блоков</div>
-                      <div class="line2">Один</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Механизм складывания</div>
-                      <div class="line2">Трость</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Количество колес</div>
-                      <div class="line2">8</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Колеса</div>
-                      <div class="line2">Резиновые</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Максимальный возраст</div>
-                      <div class="line2">3 года</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Цвет</div>
-                      <div class="line2">Синий</div>
-                    </div>
-                  </div>
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <a href="purchase.html" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
+          <div class="purchase_blank">
+            <div class="purchase_container">
+              <div class="purchase_blank__title">
+                <p>Оформление</p>
+                <p>заказа</p>
               </div>
-            </div>
-            <div class="object_baby_care_about">
-              <div class="object_baby_care_about_title">
-                Описание
-              </div>
-              <div class="object_baby_care_about_text">
-                <p>Коляска Silver Cross Balmoral — настоящее произведение искусства. Этапы производства в этой коляске включают операции, выполняемые вручную.</p>
-                <p>Селин Дион, Кэтрин Зета-Джонс, британский премьер Тони Блэр, принцесса Монако Каролина, Мик Джагер, Бэкхемы, Роберт де Ниро, Брук Шилдс, Лиз Херли, Питер Гебриэл, Эль Макферсон и другие Celebrity-персоны для своих детей выбирают коляски фирмы Silver Cross.</p>
+              <div class="purchase_blank__form">
+                <form>
+                  <p><span class="first_input">ФИО: </span><input class="fisrt_input" type="text" placeholder="what is your name?"></p>
+                  <p><span class="first_input">Телефон: </span><input class="fisrt_input" type="phone" placeholder="what is your phone?"></p>
+                  <p><span class="first_input">E-mail: </span><input class="fisrt_input" type="email" placeholder="what is your e-mail?"></p>
+                  <p class="your_purchase">Ваш заказ:</p>
+                  <div class="your_purchase_product">
+                    <div class="your_purchase_product_object">  <!-- <i class="fas fa-times-circle"></i> -->
+                      <div class="y_p_p_o_m" id="your_purchase_product_object_1">Коляска Chicco Lite Way stroller Red Passion</div>
+                      <div class="y_p_p_o_m">1 шт.</div>
+                      <div class="y_p_p_o_m">14900 Р.</div>
+                      <div class="y_p_p_o_m"><a href="javascript:void(0)"><i class="fas fa-times-circle"></i></a></div>
+                    </div>
+                    <div class="your_purchase_product_object">  <!-- <i class="fas fa-times-circle"></i> -->
+                      <div class="y_p_p_o_m" id="your_purchase_product_object_1">Коляска Chicco Lite Way stroller Red Passion</div>
+                      <div class="y_p_p_o_m">1 шт.</div>
+                      <div class="y_p_p_o_m">14900 Р.</div>
+                      <div class="y_p_p_o_m"><a href="javascript:void(0)"><i class="fas fa-times-circle"></i></a></div>
+                    </div>
+                  </div>
+                  <div class="your_purchase_btn">
+                    <a href="javascript:void(0)"><p>Oформить заказ</p></a>
+                  </div>
+                  <div class="your_purchase_ul">
+                    <div class="your_purchase_ul__title">
+                      Регистрация обязательна для следующих действий:
+                    </div>
+                    <div class="your_purchase_ul_ul">
+                      <ul>
+                        <li>активация скидочного купона</li>
+                        <li>получение бонусных баллов за покупки</li>
+                        <li>оплаты заказа через интернет</li>
+                        <li>оформление заказа на организацию</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <p class="second_input"><input type="radio" name="hi" checked="checked"><span  class="hi">покупка с регистрацией</span></p>
+                  <p class="second_input"><input type="radio" name="hi" value=""><span  class="hi">вход для зарегистрированных пользователей</span></p>
+                </form>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
