--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
               <div class="object_li">
                 <div class="Name">
-                  <img src="img/Коляски.png" alt="Коляски">
-                  <h4>Коляски</h4>
+                <a href="product page.html"><img src="img/Коляски.png" alt="Коляски">
+                  <h4>Коляски</h4></a>
                 </div>
                 <ul>
                   <li><a href="product page.html">Коляски для новорожденных</a></li>
