День 7-10, дело сделано

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="fonts/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -69,7 +70,7 @@
                 <ul>
                   <li><a href="product page.html">Коляски для новорожденных</a></li>
                   <li><a href="product page.html">Прогулочные коляски</a></li>
-                  <li><a href="product page.html">Коляски трости</a></li>
+                  <li><a href="product page.html#cat_id=3">Коляски трости</a></li>
                   <li><a href="product page.html">Универсальные коляски</a></li>
                   <li><a href="product page.html">Коляски для двойни</a></li>
                   <li><a href="product page.html">Конверты</a></li>
@@ -391,6 +392,13 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/jquery-3.5.0.min.js"></script>
+  <script src="js/xml2json.js"></script>
+  <script src="js/jquery.tmpl.min.js"></script>
+  <script src="js/jquery.cookie.js"></script>
+  <script src="js/main.js"></script>
+
 
 </body>
 </html>
