--- a/product page.html
+++ b/product page.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-9"> <!--основна-->
           <div class="col-lg-12 start"><!--Начало-->
-            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="#"> Товары для детей  »  </a><a href="#"> Коляски</p></a></div>
+            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html#cat_id=3"> Коляски</p></a></div>
             <!-- <div class="col-lg-6"></div> -->
             <div class="col-lg-12"><h1>Детские коляски</h1></div>
             <!-- <div class="col-lg-4"></div> -->
@@ -76,7 +76,10 @@
           </div>
 
           <div class="col-lg-12"> <!--Товары-->
-            <div class="object ">
+            <div id="content">
+
+            </div>
+            <!-- <div class="object ">
               <p>Коляска Chicco Lite Way stroller Red Passion</p>
               <div class="info_tovar">
                 <div class="info_tovar_img">
@@ -435,7 +438,7 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-12 d-flex justify-content-center align-items-center  end">
@@ -652,7 +655,80 @@
                           </footer>
 
                           <script src="js/jquery-3.5.0.min.js"></script>
+                          <script src="js/xml2json.js"></script>
+                          <script src="js/jquery.tmpl.min.js"></script>
+                          <script src="js/jquery.cookie.js"></script>
                           <script src="js/main.js"></script>
+                          <script src="js/my.js"></script>
+
+                          <script id="prodTmpl" type="text/x-jquery-tmpl">
+                          {{each product}}
+                              <div class="object">
+                                <a href="product selection.html#cat_id=3&id=${id}"><p>${title}</p></a>
+                                <div class="info_tovar">
+                                  <div class="info_tovar_img">
+                                    <img src="img/${image}.png" alt="Коляска">
+                                  </div>
+                                  <div class="lines">
+                                    <div class="line">
+                                      <div class="line1">Тип</div>
+                                      <div class="line2">${type}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Количество блоков</div>
+                                      <div class="line2">${bloks}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Механизм складывания</div>
+                                      <div class="line2">${mechanism}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Количество колес</div>
+                                      <div class="line2">${wheel}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Колеса</div>
+                                      <div class="line2">${material}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Максимальный возраст</div>
+                                      <div class="line2">${age}</div>
+                                    </div>
+                                    <div class="line">
+                                      <div class="line1">Цвет</div>
+                                      <div class="line2">${color}</div>
+                                    </div>
+                                    <a href="product selection.html#cat_id=3&id=${id}" class="lines_v_korziny_a">
+                                      <div class="lines_v_korziny">
+                                        <div class="lines_btn_v_korziny">
+                                          <i class="fas fa-shopping-basket"></i>в корзину
+                                        </div>
+                                      </div>
+                                    </a>
+                                  </div>
+                                  <div class="info_tovar_price">
+                                    <div class="info_tovar_price_status">
+                                      <i class="fas fa-check-circle"></i>Есть в наличии
+                                    </div>
+                                    <div class="info_tovar_price_procherk">
+                                      15800 грн.
+                                    </div>
+                                    <a href="product selection.html#cat_id=3&id=${id}">
+                                      <div class="info_tovar_price_price">
+                                        <div class="info_tovar_price_price_p">
+                                          ${price}
+                                        </div>
+                                      </div>
+                                    </a>
+                                  </div>
+                                </div>
+                              </div>
+                          {{/each}}
+                          </script>
+
+                          <script>
+                            new MyShop('products.xml','category');
+                          </script>
 
                         </body>
                         </html>
